--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,22 @@ mokok
 gauss.txt
 ggaus.txt
 asdf
+Truebound
+aerocells
+b
+boundary
+cellID
+cellcheck
+cells
+citago
+facecheck
+faces
+figaro1.txt
+figarosafe.txt
+fitago
+neighbour
+neighbourcheck
+owncheck
+owner
+pointcheck
+points
