--- a/matrix/makefile
+++ b/matrix/makefile
@@ -1,3 +1,7 @@
+build1:
+	gcc testmain.c matrix.c -lm -o wenums
+	./wenums finalinfo 
+
 all:
 	gcc main.c matrix.c -lm -o faytrix
 	./faytrix NoB.edgar 
